MDEV-18124 PK on inplace-enlarged type fails

Treat DATA_INT and DATA_CHAR as variable length for redundant row
format. We can't rely on fixed_len anymore because record can have
shorter length from before instant enlargement [MDEV-15563]. Note,
that importing such tablespace to 10.3 produces ER_TABLE_SCHEMA_MISMATCH.

[Fixes tempesta-tech/mariadb#568]